--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,30 @@
+:root {
+  box-sizing: border-box;
+}
+#text {
+  width: 300px;
+  background-color: yellow;
+  height: 200px;
+  overflow: scroll;
+  border: 5px dashed orange;
+  margin: 10px;
+}
 
-/*  Put your CSS Here */
+.important {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.picture {
+  width: 300px;
+  height: 100px;
+  border: 5px solid orange;
+  margin: 10px;
+}
+h1 {
+  margin: 25px 10px;
+}
+.background {
+  background-color: lightyellow;
+  border: 3px solid red;
+}
